security: implement secure private key management for deployment
- Replace hardcoded private keys with secure environment variable approach
- Add secure-deploy.js with multiple private key input methods:
  - Environment variables (recommended)
  - Interactive input with password masking
  - Encrypted JSON keyfile support
  - Mnemonic phrase input
  - Test accounts (testnet only)
- Create simple-deploy.js for streamlined environment variable deployment
- Add comprehensive private key security documentation
- Include .env.example template with security guidelines
- Update .gitignore to prevent private key file commits
- Add security best practices and emergency response procedures

Security improvements:
- No hardcoded private keys in source code
- Environment variable isolation
- Network validation to prevent mainnet misuse
- Balance checking before deployment
- Deployment confirmation prompts
- Automatic deployment info logging

This addresses the security vulnerability where private keys were
hardcoded as '//Alice' in the original deployment configuration.

--- a/.gitignore
+++ b/.gitignore
@@ -121,11 +121,24 @@ circuits/proofs/
 tmp/
 temp/
 
-# Security
+# Security - 私钥和敏感信息
 private_keys/
 *.key
 *.pem
+*.keystore
 mnemonic.txt
+keyfile.json
+wallet.json
+deployment-*.json
+.secret
+.private
+account.json
+
+# Environment files with sensitive data
+.env.production
+.env.staging
+.env.testnet
+.env.mainnet
 
 # claude
 CLAUDE.md
